Kicad and OSS toolchain version upgrades

--- a/examples/icebreaker/pmod_7seg9_1/Makefile
+++ b/examples/icebreaker/pmod_7seg9_1/Makefile
@@ -8,20 +8,20 @@ PACKAGE = sg48
 all: $(PROJ).rpt $(PROJ).bin
 
 %.json: %.v
-	/usr/local/bin/yosys -p 'synth_ice40 -json $@' $< $(ADD_SRC)
+	/usr/bin/yosys -p 'synth_ice40 -top $(PROJ) -json $@' $(PROJ).v $(ADD_SRC)
 
 %.asc: %.json
-	/usr/local/bin/nextpnr-ice40 --package $(PACKAGE) --$(DEVICE) --asc $@ --pcf $(PIN_DEF) --json $^
+	/usr/bin/nextpnr-ice40 --package $(PACKAGE) --$(DEVICE) --asc $@ --pcf $(PIN_DEF) --json $^
 
 %.bin: %.asc
-	/usr/local/bin/icepack $< $@
+	/usr/bin/icepack $< $@
 
 %.rpt: %.asc
-	/usr/local/bin/icetime -d $(DEVICE) -mtr $@ $<
+	/usr/bin/icetime -d $(DEVICE) -mtr $@ $<
 
 prog: $(PROJ).bin
 	@echo 'Executing prog as root!!!'
-	sudo /usr/local/bin/iceprog $<
+	sudo /usr/bin/iceprog $<
 
 clean:
 	rm -f $(PROJ).json $(PROJ).asc $(PROJ).rpt $(PROJ).bin
