--- a/examples/ulx3s/pmod_7seg9_2/Makefile
+++ b/examples/ulx3s/pmod_7seg9_2/Makefile
@@ -1,5 +1,5 @@
-PROJ = pmod_7seg9_1
-ADD_SRC = tm1640.v
+PROJ = pmod_7seg9_2
+ADD_SRC = ctl_7seg9.v tm1640.v hexdigit.v
 OSSDIR = ~/oss-cad-suite/bin
 
 PIN_DEF = ulx3s.lpf
@@ -11,7 +11,7 @@ BASECFG = $(TRELLIS)/misc/basecfgs/empty_$(PART_BASECONFIG).config
 all: $(PROJ).svf $(PROJ).bit
 
 %.json: %.v
-	$(OSSDIR)/yosys -p 'synth_ecp5 -top $(PROJ) -noccu2 -nomux -nodram -json $@' $(PROJ).v $(ADD_SRC)
+	$(OSSDIR)/yosys -p 'read -sv $(PROJ).v $(ADD_SRC); synth_ecp5 -top $(PROJ) -noccu2 -nomux -nodram -json $@'
 
 %.asc: %.json
 	$(OSSDIR)/nextpnr-ecp5 --$(DEVICE) --package $(PACKAGE) --textcfg $@ --lpf $(PIN_DEF) --json $^
