convert to Gatemate OSS toolchain, update verilog examples

--- a/examples/gatemate/pmod_7seg9_1/Makefile
+++ b/examples/gatemate/pmod_7seg9_1/Makefile
@@ -1,8 +1,8 @@
 ### Local Makefile, adding the exercise-specific code modules.  ###
 ### Anything else is defined in the upper directory centralized ###
-### Makefile config.mk                                          ###
+### Makefile config.mk (must be last on the bottom of this file)###
 ### ----------------------------------------------------------- ###
-include ../config.mk
 ADD_SRC += src/tm1640.v
 PIN_DEF = src/gm-proto.ccf
 TOP = pmod_7seg9_1
+include ../config.mk
