--- a/examples/gatemate/pmod_7seg9_2/Makefile
+++ b/examples/gatemate/pmod_7seg9_2/Makefile
@@ -1,8 +1,8 @@
 ### Local Makefile, adding the exercise-specific code modules.  ###
 ### Anything else is defined in the upper directory centralized ###
-### Makefile config.mk                                          ###
+### Makefile config.mk (must be last on the bottom of this file)###
 ### ----------------------------------------------------------- ###
-include ../config.mk
-ADD_SRC += src/tm1640.v src/ctl_7seg9.v src/hexdigit.v
-PIN_DEF = src/gm-proto.ccf
+ADD_SRC += src/tm1640.v src/ctl_7seg9.v src/hexdigit.v src/debounce.v
+PIN_DEF = src/gm.ccf
 TOP = pmod_7seg9_2
+include ../config.mk
